# 0cc-test

./: README.md  cars.ipynb
context-tree/: README.md  config.py  context-tree.ipynb  display.py  main.py  ollama.py  pyproject.toml  run.py  run_tests.py  tags.py  tree.py
context-tree/src/: __init__.py  main.py
context-tree/src/core/: navigation.py  state.py  tree.py
context-tree/src/llm/: __init__.py  client.py  streaming.py
context-tree/src/storage/: __init__.py  persistence.py
context-tree/src/ui/: commands.py  display.py  interactive.py  renderer.py
context-tree/src/utils/: errors.py  validators.py
context-tree/tests/: conftest.py
context-tree/tests/integration/: test_full_workflow.py
context-tree/tests/unit/core/: test_state.py  test_tree.py
firefox-theme/: manifest.json
llm-output/: bugout.md  claude-secmon.md  network.md  plan context-tree improvement.md
